Overflow fix on the portfolio card.

--- a/src/HomePage/Portfolio/Portfolio.css
+++ b/src/HomePage/Portfolio/Portfolio.css
@@ -1,6 +1,6 @@
 div.cards{
     display: block;
-    max-height: 550px;
+    max-height: 1000px;
     width: 45%;
     padding: 5px;
     text-align: center;
